src/syntax/tests/data/negative/expr-3.hsh
function hai()
	return (5 + (2) # Missing close parens here.
end
